deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okd-sample-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sample
          image: okd-sample-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
