deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okd-sample-app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
